<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoRa</string>
    <string name="ip">52.175.248.193</string>
    <string name="port">5555</string>

    <!--傳給service的key-->
    <string name="id">id</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="requireTime">requireTime</string>
    <string name="arriveTime">arriveTime</string>
    <string name="sender">sender</string>
    <string name="receiver">receiver</string>
    <string name="startLocation">startLocation</string>
    <string name="desLocation">desLocation</string>
    <string name="state">state</string>
    <string name="key">key</string>
    <string name="errorMsg">errorMsg</string>
    <string name="packetType">packetType</string>
    <string name="message">message</string>
    <string name="note">note</string>

    <!--service傳回來要用的-->
    <string name="type">type</string>
    <string name="activity">activity</string>
    <string name="nameArray">nameArray</string>
    <string name="buildingArray">buildingArray</string>

    <!--sharedPreference專用-->
    <string name="isLogin">isLogin</string>
    <string name="isFirstTimeOpen">isFirstTimeOpen</string>

    <!--NavigationBar選項-->
    <string name="home">主畫面</string>
    <string name="register">登記寄件</string>
    <string name="sendhistory">寄件歷史</string>
    <string name="recvhistory">收件歷史</string>
    <string name="profile">個人資料</string>
    <string name="logOut">登出</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="action_settings">Settings</string>

    <!--介面用-->
    <string name="copyright">Copyright &#169; NTPU CSIE</string>
    <string name="resource">感謝網路各方圖片支持，無法一一註明盡請見諒！</string>
    <string name="introText1">簡單方便的物流運送</string>
    <string name="Text1">突破傳統的快遞、物流系統\n提供更快、更即時的服務。</string>
    <string name="introText2">即時訂單管理系統</string>
    <string name="Text2">藉由手機APP訂單管理\n隨時掌握貨品動態。</string>
    <string name="hintEnterAccount">請輸入帳號</string>
    <string name="hintEnterPassword">請輸入密碼</string>
    <string name="hintMail">信箱</string>
    <string name="hintAccount">帳號</string>
    <string name="hintName">姓名</string>
    <string name="hintPassword">密碼</string>
    <string name="new_Order_set1">選擇地點與時間</string>
    <string name="new_Order_set1_time">時間（限當日）</string>
    <string name="new_Order_set1_start">寄件地</string>
    <string name="new_Order_set1_destination">收件地</string>
    <string name="new_Order_set2">填寫收件者資料</string>
    <string name="new_Order_set2_receiver">收件者</string>
    <string name="new_Order_set2_phone">聯絡電話</string>
    <string name="new_Order_set2_note">備註</string>
    <string name="new_Order_set3">確認訂單資訊</string>
    <string name="default_spinner">請選擇地點</string>
    <string name="next">下一步</string>
    <string name="confirm">確認無誤</string>
    <string name="estimate">預估金額</string>
    <string name="cost">總金額</string>
    <string name="home_Latest_order">最新訂單</string>

    <string name="hist_recv_all">全部</string>
    <string name="hist_recv_complete">已完成</string>
    <string name="hist_recv_incomplete">未完成</string>
    <string name="remain">帳戶金額</string>
    <string name="Jan">JAN</string>
    <string name="Feb">FEB</string>
    <string name="Mar">MAR</string>
    <string name="Apr">APR</string>
    <string name="May">MAY</string>
    <string name="Jun">JUN</string>
    <string name="Jul">JUL</string>
    <string name="Aug">AUG</string>
    <string name="Sep">SEP</string>
    <string name="Oct">OCT</string>
    <string name="Nov">NOV</string>
    <string name="Dec">DEC</string>
    <string name="account_title">基本資料</string>
    <!--0514 後更新-->
    <string name="new_pwd">輸入新密碼</string>
    <string name="confirm_new_pwd">確認新密碼</string>
    <string name="new_email">輸入新信箱</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_sender">寄件者</string>
    <string name="get_pwd">取件密碼</string>
    <string name="orderStatus">訂單狀態</string>
    <string name="order_inprocess">訂單未處理</string>
    <string name="order_processing">到達寄件地</string>
    <string name="order_waiting">貨物運送中</string>
    <string name="order_arrive">貨物到達指定位置</string>
    <string name="order_complete">貨物到達</string>
</resources>
