<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/BG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/registe"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BG"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/colorIntroText"
        app:layout_constraintTop_toBottomOf="@+id/usericon"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp" />
    <ImageView
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/colorIntroText"
        app:layout_constraintTop_toBottomOf="@+id/account_icon"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp" />

    <ImageView
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/colorIntroText"
        app:layout_constraintTop_toBottomOf="@+id/imageView22"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_plus"
        app:srcCompat="@color/colorIntroText"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp" />

    <ImageView
        android:id="@+id/user_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/user_plus_icon"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/usericon"
        android:layout_marginStart="42dp" />

    <ImageView
        android:id="@+id/usericon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="52dp"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@mipmap/user_icon" />

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="8dp"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_plus"
        app:srcCompat="@mipmap/account_icon"
        android:layout_marginStart="42dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="8dp"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_icon"
        app:srcCompat="@mipmap/mail"
        android:layout_marginStart="42dp" />


        <EditText
            android:id="@+id/etSignAccount"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="66dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/account"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/line1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/usericon"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.4" />



        <EditText
            android:id="@+id/etSignPassword"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="22dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toRightOf="@+id/account_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp" />



        <EditText
            android:id="@+id/etSignName"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="22dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toRightOf="@+id/user_plus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp" />


        <EditText
            android:id="@+id/etSignEmail"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/hintMail"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toRightOf="@+id/imageView22"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorLogin"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="註冊"
        android:textColor="@color/colorIntroText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/BG"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:text="@string/copyright"
        android:textColor="@color/colorIntroText"
        app:layout_constraintBottom_toBottomOf="@+id/BG"
        app:layout_constraintLeft_toLeftOf="@+id/BG"
        app:layout_constraintRight_toRightOf="@+id/BG" />
        <!--
        <Button
            android:id="@+id/btnSignToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="返回登入"
           />
        -->

</android.support.constraint.ConstraintLayout>